--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,46 +1,34 @@
 name: Build Windows EXE
 
-# 触发条件：当推送到 main 分支，或者手动点击触发时运行
 on:
   push:
-      branches: [ "main" ]
-        workflow_dispatch:
+    branches: [ "main" ]
+  workflow_dispatch:
 
-        jobs:
-          build:
-              # 指定使用 Windows 服务器环境
-                  runs-on: windows-latest
+jobs:
+  build:
+    runs-on: windows-latest
 
-                      steps:
-                          # 1. 拉取你的代码
-                              - name: Checkout code
-                                    uses: actions/checkout@v4
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
 
-                                        # 2. 配置 Python 环境 (推荐 3.10，兼容性较好)
-                                            - name: Set up Python
-                                                  uses: actions/setup-python@v4
-                                                        with:
-                                                                python-version: '3.10'
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.10'
 
-                                                                    # 3. 安装依赖库
-                                                                        - name: Install dependencies
-                                                                              run: |
-                                                                                      python -m pip install --upgrade pip
-                                                                                              pip install pyinstaller
-                                                                                                      # 安装你之前在 requirements.txt 里列出的库
-                                                                                                              pip install -r requirements.txt
+    - name: Install dependencies
+      run: |
+        pip install --upgrade pip
+        pip install pyinstaller rembg pillow opencv-python numpy onnxruntime
 
-                                                                                                                  # 4. 执行打包命令
-                                                                                                                      # --onefile: 打包成单个 exe 文件
-                                                                                                                          # --windowed: 运行时不显示黑色的命令行窗口 (适合 GUI 程序)
-                                                                                                                              # --collect-all rembg: 强制收集 rembg 库的所有相关文件，防止报错
-                                                                                                                                  - name: Build with PyInstaller
-                                                                                                                                        run: |
-                                                                                                                                                pyinstaller --noconfirm --onefile --windowed --collect-all rembg --name "IDPhotoTool" main.py
+    - name: Build with PyInstaller
+      run: |
+        pyinstaller --noconfirm --onefile --windowed --collect-all rembg --name "IDPhotoTool" main.py
 
-                                                                                                                                                    # 5. 上传打包好的文件供你下载
-                                                                                                                                                        - name: Upload Artifact
-                                                                                                                                                              uses: actions/upload-artifact@v4
-                                                                                                                                                                    with:
-                                                                                                                                                                            name: IDPhotoTool-Windows
-                                                                                                                                                                                    path: dist/IDPhotoTool.exe
+    - name: Upload Artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: IDPhotoTool-Windows
+        path: dist/IDPhotoTool.exe
